--- a/_site.yml
+++ b/_site.yml
@@ -6,7 +6,7 @@ navbar:
   - text: "Home"
     href: index.html
   - text: "Analisis"
-    href: sosialisasi_sbr011_html.html
+    href: sosialisasi_sbr011.html
 output:
   html_document:
     toc: true
